//
//  AppText.swift
//
//
//  Created by 최승명 on 7/29/24.
//

import Foundation

public struct AppText {
    // 공통
    public static let cancel = NSLocalizedString("취소", comment: "")
    public static let more = NSLocalizedString("더 보기", comment: "")
    public static let ok = NSLocalizedString("확인", comment: "")
    public static let download = NSLocalizedString("받기", comment: "")
    
    // 검색 화면
    public static let recentKeyword = NSLocalizedString("최근 검색어", comment: "")
    public static let searchBarTitle = NSLocalizedString("검색", comment: "")
    public static let searchBarPlaceHolder = NSLocalizedString("게임, 앱, 스토리 등", comment: "")
    public static let emptyResult = NSLocalizedString("검색 결과가 없습니다!", comment: "")
    
    // 앱 상세화면
    
    public static let ago = NSLocalizedString("전", comment: "")
    public static let age = NSLocalizedString("연령", comment: "")
    public static let ageSub = NSLocalizedString("세", comment: "")
    public static let category = NSLocalizedString("카테고리", comment: "")
    public static let contentAdvisoryRating = NSLocalizedString("연령 등급", comment: "")
    public static let developer = NSLocalizedString("개발자", comment: "")
    public static let infomation = NSLocalizedString("정보", comment: "")
    public static let language = NSLocalizedString("언어", comment: "")
    public static let languageSub = NSLocalizedString("개 언어", comment: "")
    public static let newFunction = NSLocalizedString("새로운 기능", comment: "")
    public static let preview = NSLocalizedString("미리보기", comment: "")
    public static let provider = NSLocalizedString("제공자", comment: "")
    public static let releaseNotes = NSLocalizedString("버전 기록", comment: "")
    public static let size = NSLocalizedString("크기", comment: "")
    public static let userRating = NSLocalizedString("개의 평가", comment: "")
    public static let version = NSLocalizedString("버전", comment: "")
}
