...
                if !store.searchResults.isEmpty && !store.isLimit {
                    bottomProgressView
                }
            }
            .listStyle(.plain)
            .animation(.easeInOut, value: store.state.searchResults)
            .accessibilityIdentifier("searchResultList") // List View의 identifier 설정
        case .loading:
            ProgressView()
                .progressViewStyle(.circular)
                .frame(width: 40, height: 40)
        case .showingEmpty:
            Text(AppText.emptyResult)
...
